baml_language/crates/baml_tests/tests/snapshots/fs__fs_exists_returns_true.snap
---
source: crates/baml_tests/tests/fs.rs
expression: "stabilize(&output.bytecode, &root)"
---
function main() -> bool {
    load_const "{TMPDIR}/here.txt"
    dispatch_future baml.fs.exists
    await
    return
}
