baml_language/crates/baml_tests/tests/snapshots/fs__fs_file_rw_write_and_read_back.snap
---
source: crates/baml_tests/tests/fs.rs
expression: "stabilize(&output.bytecode, &root)"
---
function main() -> string {
    load_const "{TMPDIR}/data.txt"
    load_const "r+"
    dispatch_future baml.fs.open
    await
    store_var file
    load_var file
    load_const 6
    dispatch_future baml.fs.File.seek
    await
    pop 1
    load_var file
    load_const "to Rust!!"
    dispatch_future baml.fs.File.write
    await
    pop 1
    load_var file
    load_const 0
    dispatch_future baml.fs.File.seek
    await
    pop 1
    load_var file
    dispatch_future baml.fs.File.text
    await
    return
}
