baml_language/crates/baml_tests/tests/snapshots/fs__fs_file_rw_write_bytes.snap
---
source: crates/baml_tests/tests/fs.rs
expression: "stabilize(&output.bytecode, &root)"
---
function main() -> int {
    load_const "{TMPDIR}/source.bin"
    load_const "r"
    dispatch_future baml.fs.file
    await
    dispatch_future baml.fs.File.bytes
    await
    store_var bytes
    load_const "{TMPDIR}/data.bin"
    load_const "r+"
    dispatch_future baml.fs.file
    await
    store_var file
    load_var file
    load_const 0
    dispatch_future baml.fs.File.seek
    await
    pop 1
    load_var file
    load_var bytes
    dispatch_future baml.fs.File.write_bytes
    await
    return
}
