baml_language/crates/baml_tests/tests/snapshots/fs__fs_file_write_on_readonly_errors.snap
---
source: crates/baml_tests/tests/fs.rs
expression: "stabilize(&output.bytecode, &root)"
---
function main() -> int {
    load_const "{TMPDIR}/readonly.txt"
    load_const "r"
    dispatch_future baml.fs.open
    await
    load_const "should fail"
    dispatch_future baml.fs.File.write
    await
    return
}
