baml_language/crates/baml_tests/tests/snapshots/fs__fs_roundtrip_write_and_read.snap
---
source: crates/baml_tests/tests/fs.rs
expression: "stabilize(&output.bytecode, &root)"
---
function main() -> string {
    load_const "{TMPDIR}/roundtrip.txt"
    load_const "roundtrip data"
    dispatch_future baml.fs.write
    await
    pop 1
    load_const "{TMPDIR}/roundtrip.txt"
    load_const "r"
    dispatch_future baml.fs.file
    await
    dispatch_future baml.fs.File.text
    await
    return
}
