baml_language/crates/baml_tests/tests/snapshots/fs__fs_size_returns_length.snap
---
source: crates/baml_tests/tests/fs.rs
expression: "stabilize(&output.bytecode, &root)"
---
function main() -> int {
    load_const "{TMPDIR}/data.bin"
    dispatch_future baml.fs.size
    await
    return
}
