baml_language/crates/baml_tests/tests/snapshots/fs__fs_write_bytes.snap
---
source: crates/baml_tests/tests/fs.rs
expression: "stabilize(&output.bytecode, &root)"
---
function main() -> int {
    load_const "{TMPDIR}/source.bin"
    load_const "r"
    dispatch_future baml.fs.open
    await
    dispatch_future baml.fs.File.bytes
    await
    store_var data
    load_const "{TMPDIR}/copy.bin"
    load_var data
    dispatch_future baml.fs.write_bytes
    await
    return
}
