baml_language/crates/baml_tests/tests/snapshots/fs__fs_write_overwrites_existing.snap
---
source: crates/baml_tests/tests/fs.rs
expression: "stabilize(&output.bytecode, &root)"
---
function main() -> int {
    load_const "{TMPDIR}/existing.txt"
    load_const "new content"
    dispatch_future baml.fs.write
    await
    return
}
