baml_language/crates/baml_tests/tests/snapshots/fs__fs_write_string.snap
---
source: crates/baml_tests/tests/fs.rs
expression: "stabilize(&output.bytecode, &root)"
---
function main() -> int {
    load_const "{TMPDIR}/output.txt"
    load_const "Hello, world!"
    dispatch_future baml.fs.write
    await
    return
}
